<resources>
    <string name="app_name">西国三十三所巡礼リスト</string>
    <!-- お寺名前 -->
    <string-array name="lv_temple">
        <item>青岸渡寺</item>
        <item>金剛宝山寺</item>
        <item>粉河寺</item>
        <item>施福寺 （槇尾寺）</item>
        <item>葛井寺</item>
        <item>岡　寺 （龍蓋寺）</item>
        <item>南法華寺 （壺阪寺）</item>
        <item>長谷寺</item>
        <item>南円堂</item>
        <item>三室戸寺</item>
        <item>上醍醐 准胝堂</item>
        <item>正法寺 （岩間寺）</item>
        <item>石山寺</item>
        <item>三井寺 （園城寺）</item>
        <item>今熊野観音寺 （観音寺）</item>
        <item>清水寺</item>
        <item>六波羅蜜寺</item>
        <item>六角堂　頂法寺</item>
        <item>革堂　行願寺</item>
        <item>善峯寺</item>
        <item>穴太寺</item>
        <item>総持寺</item>
        <item>勝尾寺</item>
        <item>中山寺</item>
        <item>播州清水寺</item>
        <item>一乗寺</item>
        <item>圓教寺</item>
        <item>成相寺</item>
        <item>松尾寺</item>
        <item>宝厳寺</item>
        <item>長命寺</item>
        <item>観音正寺</item>
        <item>華厳寺</item>
    </string-array>

    <!-- 詳細画面 -->
    <string name="tv_honzon">本尊名</string>
    <string name="tv_shushi">宗旨</string>
    <string name="tv_address">所在地</string>
    <string name="tv_url">URL</string>
    <string name="tv_note">感想</string>
    <string name="bt_back">保存</string>
</resources>